refactor: memoryImage 로직 업데이트